--- a/rooster-android-app/res/drawable/border_rounded.xml
+++ b/rooster-android-app/res/drawable/border_rounded.xml
@@ -3,4 +3,5 @@
     android:shape="rectangle">
     <solid android:color="#ffffff" />
     <stroke android:width="1dp" android:color="#878787"/>
+    <corners android:radius="5dp" />
 </shape>
